# tp_github_actions_dauphine

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
mathutils/: __init__.py  calculator.py
mathutils/.github/workflows/: ci.yml
tests/: test_calculator.py
