[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathutils-tp-cicd"
version = "0.1.0"
description = "A simple mathematical utilities package for CI/CD learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "DevOps Student", email = "student@university.edu"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/yourusername/tp-cicd"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
